# digital-guide-ai

./: .gitattributes  .gitignore  AGENTS.md  PLAN.md  README.md  api.md  deployment-manual.md  product-design.md  project_structure.txt  test_query.py
.sisyphus/plans/: api-specification.md
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: chat.py
app/services/: llm_service.py
backend/: .env.example  CMakeLists.txt  chat.py  environment.yml  launch.sh  launchLiveTalking.sh  main.py  requirements.txt  test_admin.py  test_query.py  test_recommend.py
backend/LiveTalking/: config.py  requirements-runtime.txt  service.py
backend/LiveTalking/avatars/: base_avatar.py
backend/LiveTalking/server/: routes.py  ws_routes.py
backend/LiveTalking/streamout/: ws_stream.py
backend/app/: database.py  logging_config.py  main.py  models.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: admin.py  auth.py  chat.py  consumption.py  conversations.py  dashboard.py  digital_human.py  recommend.py  reports_api.py  websocket.py
backend/app/config/: path.txt  paths.py  prompt_loader.py  prompts.yaml
backend/app/services/: admin_service.py  asr_service.py  auth_service.py  consumption_service.py  cosyvoice_tts.py  dashboard_service.py  digital_human_client.py  digital_human_session.py  knowledge_service.py  llm_service.py  rag_service.py  recommend_service.py  report_service.py  streaming_utils.py  tts_service.py  tts_streaming.py
backend/data/: data.csv
backend/data/knowledge_docs/: 西湖.txt_1.txt
backend/scripts/: bootstrap.sh  config_dataset.py  generate_mock_data.py  ingest_consumption.py  ingest_guide.py  init_db.py  insert_mock_data.py  run.sh  start_livetalking.sh  test_audio.py  test_markitdown.py  update_old_messages.py  verify_cosyvoice.py  verify_integration.py
backend/tests/: conftest.py  test_digital_human.py  test_tts_streaming.py
frontend/: .gitkeep  CMakeLists.txt  config.json  main.cpp  res.qrc
frontend/qml/: AdminPage.qml  ChatPage.qml  ConsumptionTab.qml  DashboardTab.qml  HistoryPage.qml  LoginPage.qml  Main.qml  RecommendTab.qml  ReportTab.qml  SettingsPage.qml
frontend/qml/components/: DigitalHumanAvatar.qml  DigitalHumanView.qml  MessageBubble.qml
frontend/src/: adminmanager.cpp  adminmanager.h  apiservice.cpp  apiservice.h  audioplayer.cpp  audioplayer.h  consumptionmanager.cpp  consumptionmanager.h  conversationmanager.cpp  conversationmanager.h  dashboardmanager.cpp  dashboardmanager.h  digitalhumanmanager.cpp  digitalhumanmanager.h  historymanager.cpp  historymanager.h  livetalkingclient.cpp  livetalkingclient.h  loginmanager.cpp  loginmanager.h  recommendmanager.cpp  recommendmanager.h  reportmanager.cpp  reportmanager.h  settingsmanager.cpp  settingsmanager.h  voiceinterface.cpp  voiceinterface.h
scripts/: config_guide.py  download_model.py  ingest_dataset.py  ingest_guide.py
